# My-IP-Calculator

./: .coverage  .gitignore  Dockerfile  LICENSE.md  README.md  index.html  mkdocs.yml  pyproject.toml  versions.json
.github/workflows/: cd.yml  ci.yml  codeql.yml  trivy.yml
0.0.1/: 404.html  index.html  objects.inv  sitemap.xml
0.0.1/code/: index.html
0.0.1/faq/: index.html
0.0.1/how-to-guides/: index.html
0.0.1/install/: index.html
0.0.1/manual/: index.html
0.0.2/: 404.html  index.html  sitemap.xml
0.0.2/code/: index.html
0.0.2/faq/: index.html
0.0.2/how-to-guides/: index.html
0.0.2/manual/: index.html
0.0.3/: 404.html  index.html  sitemap.xml
0.0.3/faq/: index.html
0.0.3/how-to-guides/: index.html
0.0.3/manual/: index.html
0.0.4/: 404.html  index.html  sitemap.xml
0.0.4/faq/: index.html
0.0.4/how-to-guides/: index.html
0.0.4/manual/: index.html
0.1.0/: 404.html
0.2.0/: 404.html  index.html  sitemap.xml
0.2.0/faq/: index.html
0.2.0/how-to-guides/: index.html
0.2.0/manual/: index.html
1.0.0/: 404.html  index.html  sitemap.xml
1.0.0/faq/: index.html
1.0.0/how-to-guides/: index.html
1.0.0/manual/: index.html
1.0.1/: 404.html  index.html  sitemap.xml
1.0.1/faq/: index.html
1.0.1/how-to-guides/: index.html
1.0.1/manual/: index.html
1.0.2/: 404.html  index.html  sitemap.xml
1.0.2/faq/: index.html
1.0.2/how-to-guides/: index.html
1.0.2/manual/: index.html
1.0.5/: 404.html  index.html  sitemap.xml
1.0.5/faq/: index.html
1.0.5/how-to-guides/: index.html
1.0.5/manual/: index.html
1.0.6/: 404.html  index.html  sitemap.xml
1.0.6/faq/: index.html
1.0.6/how-to-guides/: index.html
1.0.6/manual/: index.html
docs/: code.md  faq.md  how-to-guides.md  index.md  install.md  manual.md
latest/faq/: index.html
latest/how-to-guides/: index.html
latest/manual/: index.html
latest/overwrites/: main.html
meta/bom/: bom.json  bom.xml
meta/requirements/: requirements-dev.txt  requirements.txt
scripts/: update-doc.py  update-project-properties.py
site/: index.html  sitemap.xml
site/faq/: index.html
site/how-to-guides/: index.html
site/manual/: index.html
src/app/: __init__.py  calc.py  cmd.py  main.py
tests/: __init__.py
tests/integral/: __init__.py
tests/integrated/: cmd_test.py  inspiration_test.py  main_calculate_test.py  main_cmd_test.py  main_subnet_test.py  main_validate_test.py  main_version_test.py  net_test.py  subnet_test.py  validate_test.py  version_test.py
tests/unity/: __init__.py  calc_test.py  conversor_test.py  main_test.py  maskcompress_test.py  maskdecompress_test.py  maskgenerator_test.py  network_test.py  networkcalculator_test.py  outoptions_test.py  printer_test.py  validator_test.py
